--- a/zadanie 9/style2.css
+++ b/zadanie 9/style2.css
@@ -1,5 +1,9 @@
-body {
+* {
     margin: 0;
+    padding: 0;
+}
+
+body {
     background-color: #F6E5DC;
     font-family: Verdana, Geneva, Tahoma, sans-serif;
     font-size: 150%;
@@ -7,11 +11,9 @@ body {
 
 .baner {
     background-color: #2F180C;
-    display: flex;
-    justify-content: center;
-    align-items: center;
     color: rgb(216, 149, 6);
     height: 60px;
+    text-align: center;
 }
 
 .gora {
