--- a/2025-2026 klasa 2 html/zadanie 8/style.css
+++ b/2025-2026 klasa 2 html/zadanie 8/style.css
@@ -1,3 +1,17 @@
+:root {
+  --p-bg-color: #ffffff;
+  --top-stopka-bg-color: rgb(143, 112, 83);
+  --mid-bg-color: aliceblue;
+}
+
+.dark-mode{
+  background-color: #272727;
+  color: white;
+  --p-bg-color: #4e4e4e;
+  --top-stopka-bg-color: rgb(85, 66, 49);
+  --mid-bg-color: rgb(116, 123, 129);
+}
+
 * {
   margin: 0;
   padding: 0;
@@ -8,16 +22,17 @@ img {
 }
 
 .top {
-  background-color: rgb(143, 112, 83);
+  background-color: var(--top-stopka-bg-color);
   display: flex;
   justify-content: center;
-  column-gap: 200px;
+  column-gap: 10%;
   padding: 10px;
 }
 
 .p1,
 .p2,
-.p3 {
+.p3,
+button {
   background-color: white;
   padding: 10px;
   border-radius: 999999px;
@@ -27,9 +42,15 @@ img {
   }
 }
 
+button {
+  cursor: pointer;
+}
+
 .p1:hover,
 .p2:hover,
-.p3:hover {
+.p3:hover,
+button:hover {
+  color: white;
   background-color: transparent;
   a {
     color: white;
@@ -37,7 +58,7 @@ img {
 }
 
 .mid {
-  background-color: aliceblue;
+  background-color: var(--mid-bg-color);
   padding: 5px;
 }
 
@@ -58,7 +79,7 @@ ul {
 }
 
 .stopka {
-  background-color: rgb(143, 112, 83);
+  background-color: var(--top-stopka-bg-color);
   padding: 40px;
   color: white;
   text-align: center;
